--- a/src/Component/Signup/Signup.module.sass
+++ b/src/Component/Signup/Signup.module.sass
@@ -33,7 +33,7 @@
     line-height: 2rem
     margin-bottom: 1rem
     
-    form
+    .formxx
         background: #fff
         box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px
         display: flex
