--- a/src/a.sass
+++ b/src/a.sass
@@ -50,3 +50,13 @@
         display: none !important
     .fdjfkjkajawas 
         display: none !important
+    .vid, .jksladjkalsjasfd
+        width: 100% !important
+        height: 100% !important
+    .wrap-me
+        width: 50% !important
+    .fjkdjskjfksjdaswawsa 
+        height: calc((716px - 60px) - 68px) !important
+.open-chat-ss
+    >div
+        width: 100vw !important
